--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^2.8.0"
   },
   "dependencies": {
-    "daisyui": "^2.6.0"
+    "daisyui": "^2.6.0",
+    "normalize.css": "^8.0.1"
   }
 }
