--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "vite": "^2.8.0"
   },
   "dependencies": {
-    "daisyui": "^2.6.0",
-    "normalize.css": "^8.0.1"
+    "daisyui": "^2.6.0"
   }
 }
